test/CheckError/Const/CallNonConstMethodOnConstObject.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass(int value) {
	static create = default;
	
	void modify() {
		@value = 100;
	}
}

export void f() {
	const TestClass object = TestClass(10);
	// CHECK: .loci:15:2: error: cannot refer to mutator method 'modify' from const object of type 'const(TestClass)'
	object.modify();
}

// CHECK: 1 error generated.
